Update landing page

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Amber Elk</title>
-</head>
-<body>
+  <!-- Standard Meta -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
+  <!-- Site Properities -->
+  <title>Homepage Example - Semantic</title>
+
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
+
+  <link rel="stylesheet" type="text/css" href="bower_components/semantic/build/packaged/css/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/landingPage.css">
+</head>
+<body id="home">
+
+  <div class="center aligned ui header">
+    <div class="row">
+      <div class="column">
+        <h1 class="center aligned ui header" id="amber-elk-header">
+          PROJECT<br>AMBER ELK
+        </h1>
+      </div>
+    </div>
+    <br><br>
+    <div class="row">
+      <div>
+        <h2 class="ui header">Into The Deep</h2> <br>
+        <p>Dive into the infinite abyss as you zoom through the ocean's dark underbelly. </p> <br>
+        <div class="ui animated fade button">
+          <div class="visible content">Play Now</div>
+          <div class="hidden content">Dive In</div>
+          <a href="#"></a>
+        </div>
+        <div class="ui inverted section divider"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui page grid">
+    <div class="row">
+      <div class="column">
+        <h2 class="center aligned ui header">
+          What Players Are Saying
+        </h2>
+        <div class="ui horizontal divider"><i class="heart icon"></i></div>
+        <div>
+          <div class="ui three column grid">
+            <div class="column">
+            </div>
+            <div class="column">
+              <div class="ui segment">
+                Need to fix this - make much more appealing box thingy and add quotes.
+                See: http://www.monumentvalleygame.com/
+              </div>
+            </div>
+            <div class="column">
+            </div>
+            <div class="column">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+  <script src="semantic/packaged/javascript/semantic.min.js"></script>
 </body>
+
 </html>
