Place github ribbon

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,11 @@
   <link rel="stylesheet" type="text/css" href="styles/landingPage.css">
 </head>
 <body id="home">
-
+	<div class="github-fork-ribbon-wrapper right">
+		<div class="github-fork-ribbon">
+		<a href="https://github.com/Amber-Elk/amber-elk">Fork me on Github</a>
+		</div>
+	</div>
   <div class="center aligned ui header">
     <div class="row">
       <div class="column">
