Incorporate github ribbon and include player quote block

--- a/client/index.html
+++ b/client/index.html
@@ -46,11 +46,46 @@
   <div class="ui page grid">
     <div class="row">
       <div class="column">
-        <h2 class="center aligned ui header">
+        <h3 class="center aligned ui header">
           What Players Are Saying
-        </h2>
+        </h3>
         <div class="ui horizontal divider"><i class="heart icon"></i></div>
+
         <div>
+        	<div class="commentbox">
+        	<p class="playerquote">
+        		Greatest game I've ever played.
+        	<p>
+        	<p class="playerquotesource">
+        		Hideo Kojima
+        	<p>
+        	<p class="playerquote">
+        		Artwork in its purest form.
+        	<p>
+        	<p class="playerquotesource">
+        		Jony Ive
+        	<p>
+        	<p class="playerquote">
+        		Project Amber Elk is absolutely stunning.
+        	<p>
+        	<p class="playerquotesource">
+        		Fred
+        	<p>
+        	<p class="playerquote">
+        		Transformational.
+        	<p>
+        	<p class="playerquotesource">
+        		Phillip
+        	<p>
+        	<p class="playerquote">
+        		Sublime.
+        	<p>
+        	<p class="playerquotesource">
+        		Oprah
+        	<p>
+        	</div>
+        </div>
+<!--         <div>
           <div class="ui three column grid">
             <div class="column">
             </div>
@@ -65,8 +100,8 @@
             <div class="column">
             </div>
           </div>
+        </div>-->      
         </div>
-      </div>
     </div>
   </div>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
