Changed deployment and build process

--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properities -->
-  <title>Homepage Example - Semantic</title>
+  <title>Amber Elk</title>
 
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" type="text/css" href="bower_components/semantic/build/packaged/css/semantic.min.css">
-  <link rel="stylesheet" type="text/css" href="styles/landingPage.css">
+  <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.min.css">
 </head>
 <body id="home">
 	<div class="github-fork-ribbon-wrapper right">
@@ -104,8 +104,7 @@
         </div>
     </div>
   </div>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
-  <script src="semantic/packaged/javascript/semantic.min.js"></script>
+  <script src="js/vendor.min.js"></script>
 </body>
 
 </html>
