Fix gulp file so cleanup runs automatically

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     <br><br>
     <div class="row">
       <div>
-        <h2 class="ui header">Into The Deep</h2> <br>
+        <h5 class="ui header" id="deep-header">Into The Deep</h5> <br>
         <p>Dive into the infinite abyss as you zoom through the ocean's dark underbelly. </p> <br>
         <div class="ui animated fade button">
           <div class="visible content">Play Now</div>
