Change font size and button color/size

--- a/client/index.html
+++ b/client/index.html
@@ -31,13 +31,14 @@
     <br><br>
     <div class="row">
       <div>
-        <h5 class="ui header" id="deep-header">Into The Deep</h5> <br>
+        <h3 class="ui header" id="deep-header">Into The Deep</h3> <br>
         <p>Dive into the infinite abyss as you zoom through the ocean's dark underbelly. </p> <br>
-        <div class="ui animated fade button">
+        <div class="ui animated fade teal button playbutton">
           <div class="visible content">Play Now</div>
           <div class="hidden content">Dive In</div>
           <a href="#"></a>
         </div>
+        <br><br>
         <div class="ui inverted section divider"></div>
       </div>
     </div>
