--- a/demo-scene/test.html
+++ b/demo-scene/test.html
@@ -8,8 +8,10 @@
 <body>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.js"></script>
+<script src='OrbitControls.js'></script>
+<script src='spheretest.js'></script>
 <script src='cameratest.js'></script>
-<script src="test2.js"></script>
+<!-- <script src="test2.js"></script> -->
 
 </body>
 </html>
