Update font and add About Us Section

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <title>Amber Elk</title>
 
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
-
+  <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6710912/782806/css/fonts.css" />
   <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.min.css">
 </head>
@@ -31,77 +31,105 @@
     <br><br>
     <div class="row">
       <div>
-        <h3 class="ui header" id="deep-header">Into The Deep</h3> <br>
-        <p>Dive into the infinite abyss as you zoom through the ocean's dark underbelly. </p> <br>
-        <div class="ui animated fade teal button playbutton">
-          <div class="visible content">Play Now</div>
-          <div class="hidden content">Dive In</div>
-          <a href="#"></a>
-        </div>
-        <br><br>
+        <h3 class="ui header" id="deep-header">Into The Deep</h3>
+        <p id="tag-line">Dive into the infinite abyss as you zoom through the ocean's dark underbelly. </p> <br><br>
+          <a href="#">
+            <div class="ui animated fade teal button playbutton">
+              <div class="visible content">Play Now</div>
+              <div class="hidden content">Dive In</div>
+            </div>            
+          </a>
+        <br><br><br>
         <div class="ui inverted section divider"></div>
       </div>
     </div>
   </div>
 
   <div class="ui page grid">
+  <br>
     <div class="row">
       <div class="column">
-        <h3 class="center aligned ui header">
+        <h2 class="center aligned ui header">
           What Players Are Saying
-        </h3>
+        </h2>
+        <br>
         <div class="ui horizontal divider"><i class="heart icon"></i></div>
 
         <div>
         	<div class="commentbox">
         	<p class="playerquote">
         		Greatest game I've ever played.
-        	<p>
+        	</p>
         	<p class="playerquotesource">
-        		Hideo Kojima
-        	<p>
+        		-Hideo Kojima
+        	</p>
+          <br>
         	<p class="playerquote">
         		Artwork in its purest form.
-        	<p>
+        	</p>
         	<p class="playerquotesource">
-        		Jony Ive
-        	<p>
+        		-Jony Ive
+        	</p>
+          <br>
         	<p class="playerquote">
         		Project Amber Elk is absolutely stunning.
-        	<p>
+        	</p>
         	<p class="playerquotesource">
-        		Fred
-        	<p>
+        		-Fred
+        	</p>
+          <br>
         	<p class="playerquote">
         		Transformational.
-        	<p>
+        	</p>
         	<p class="playerquotesource">
-        		Phillip
-        	<p>
+        		-Phillip
+        	</p>
+          <br>
         	<p class="playerquote">
         		Sublime.
-        	<p>
+        	</p>
         	<p class="playerquotesource">
-        		Oprah
-        	<p>
-        	</div>
+        		-Oprah
+        	</p>
         </div>
-<!--         <div>
-          <div class="ui three column grid">
-            <div class="column">
-            </div>
-            <div class="column">
-              <div class="ui segment">
-                Need to fix this - make much more appealing box thingy and add quotes.
-                See: http://www.monumentvalleygame.com/
+      </div>
+    </div>
+  </div>
+
+  <div class="ui inverted section divider"></div>
+    <div class="ui page grid">
+      <br>
+        <div class="row">
+          <div class="column">
+            <h2 class="center aligned ui header">
+              About Us
+            </h2>
+            <br>
+            <div class="ui horizontal divider"><i class="user icon"></i></div>
+            <br><br>
+
+            <div class="ui page grid stackable element">
+            <div class="center four column aligned row">
+              <div class="column">
+                <h4 class="ui header about-name">Rishi Goomar</h4>
+                <a href="http://github.com/rgoomar"><i class="github sign icon big"></i></a><a href="http://www.linkedin.com/pub/rishi-goomar/90/a52/886"><i class="linkedin icon big"></i></a>
+              </div>
+              <div class="column">
+                <h4 class="ui header about-name">Sean Rose</h4>
+                <a href="http://github.com/sean1rose"><i class="github sign icon big"></i></a><a href="http://www.linkedin.com/pub/sean-rose/9a/894/653/"><i class="linkedin icon big"></i></a>
+              </div>
+              <div class="column">
+                <h5 class="ui header about-name">Liam Schauerman</h5>
+                <a href="http://github.com/LiamSchauerman"><i class="github sign icon big"></i></a><a href="www.linkedin.com/pub/liam-schauerman/69/79/b97"><i class="linkedin icon big"></i></a>
+              </div>
+              <div class="column">
+                <h4 class="ui header about-name">Tom Varik</h4>
+                <a href="http://github.com/TGVarik"><i class="github sign icon big"></i></a><a href="http://www.linkedin.com/in/tomgvarik"><i class="linkedin icon big"></i></a>
               </div>
             </div>
-            <div class="column">
             </div>
-            <div class="column">
-            </div>
+
           </div>
-        </div>-->
         </div>
     </div>
   </div>
