About us and fonts update to landing page

--- a/client/index.html
+++ b/client/index.html
@@ -96,7 +96,7 @@
     </div>
   </div>
 
-  <div class="ui inverted section divider"></div>
+  <div class="ui inverted section divider team"></div>
     <div class="ui page grid">
       <br>
         <div class="row">
@@ -120,7 +120,7 @@
               </div>
               <div class="column">
                 <h5 class="ui header about-name">Liam Schauerman</h5>
-                <a href="http://github.com/LiamSchauerman"><i class="github sign icon big"></i></a><a href="www.linkedin.com/pub/liam-schauerman/69/79/b97"><i class="linkedin icon big"></i></a>
+                <a href="http://github.com/LiamSchauerman"><i class="github sign icon big"></i></a><a href="http://www.linkedin.com/pub/liam-schauerman/69/79/b97"><i class="linkedin icon big"></i></a>
               </div>
               <div class="column">
                 <h4 class="ui header about-name">Tom Varik</h4>
