--- a/demo-scene/test.html
+++ b/demo-scene/test.html
@@ -6,12 +6,11 @@
   <style>canvas { width: 100%; height: 100% }</style>
 </head>
 <body>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.js"></script>
-<!-- <script src='OrbitControls.js'></script> -->
+
+<script src="./lib/jquery-min.js"></script>
+<script src="./lib/three.min.js"></script>
 <script src='spheretest.js'></script>
 <script src='cameratest.js'></script>
-<!-- <script src="test2.js"></script> -->
 
 </body>
 </html>
