Progress on player model

--- a/demo-scene/ringtest.html
+++ b/demo-scene/ringtest.html
@@ -11,6 +11,7 @@
 <script src='../app/js/controls/OrbitControls.js'></script>
 <script src="../app/js/models/RingGeometry3D.js"></script>
 <script src="../app/js/models/RingArray.js"></script>
+<script src="../app/js/models/player.js"></script>
 <script src="ringtest.js"></script>
 </body>
 </html>
