--- a/demo-scene/test.html
+++ b/demo-scene/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<script src="./lib/jquery-min.js"></script>
+<script src="./lib/jquery.min.js"></script>
 <script src="./lib/three.min.js"></script>
 <script src='spheretest.js'></script>
 <script src='cameratest.js'></script>
