player model added to demo scene

--- a/demo-scene/test.html
+++ b/demo-scene/test.html
@@ -9,6 +9,9 @@
 
 <script src="./lib/jquery.min.js"></script>
 <script src="./lib/three.min.js"></script>
+<script src="../app/js/models/RingGeometry3D.js"></script>
+<script src="../app/js/models/RingArray.js"></script>
+<script src="../app/js/models/player.js"></script>
 <script src='spheretest.js'></script>
 <script src='cameratest.js'></script>
 
