rough game ready for live testing

--- a/demo-scene/test.html
+++ b/demo-scene/test.html
@@ -12,8 +12,7 @@
 <script src="../app/js/models/RingGeometry3D.js"></script>
 <script src="../app/js/models/RingArray.js"></script>
 <script src="../app/js/models/player.js"></script>
-<script src='spheretest.js'></script>
-<script src='cameratest.js'></script>
+<script src='../app/js/game.js'></script>
 
 </body>
 </html>
