--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
       <div>
         <h3 class="ui header" id="deep-header">Into The Deep</h3>
         <p id="tag-line">Dive into the infinite abyss as you zoom through the ocean's dark underbelly. </p> <br><br>
-          <a href="#">
+          <a href="game.html">
             <div class="ui animated fade teal button playbutton">
               <div class="visible content">Play Now</div>
               <div class="hidden content">Dive In</div>
