--- a/client/game.html
+++ b/client/game.html
@@ -2,14 +2,18 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title></title>
+  <title>INTO THE DEEP</title>
   <style>canvas { width: 100%; height: 100% }</style>
+  <link rel="stylesheet" type="text/css" href="css/main.min.css">
 </head>
 <body>
 
 <script src="js/vendor.min.js"></script>
 <script src="js/main.min.js"></script>
-
+<div id='info'>
+	<div id='level'>Level 0</div>
+	<div id='score'></div>
+</div>
 
 </body>
 </html>
