adds glow, documentation to player model

--- a/demo-scene/ringtest.html
+++ b/demo-scene/ringtest.html
@@ -3,7 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Ring Test</title>
-
+    <style>
+      body {
+        color: #000;
+        background-color: #000;
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
 </head>
 <body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
@@ -11,6 +18,9 @@
 <script src='../app/js/controls/OrbitControls.js'></script>
 <script src="../app/js/models/RingGeometry3D.js"></script>
 <script src="../app/js/models/RingArray.js"></script>
+<script src="../app/js/glow/threex.dilategeometry.js"></script>
+<script src="../app/js/glow/threex.atmospherematerial.js"></script>
+<script src="../app/js/glow/threex.geometricglowmesh.js"></script>
 <script src="../app/js/models/player.js"></script>
 <script src="ringtest.js"></script>
 </body>
