Fixes player.effectiveRadius()

--- a/app/game.html
+++ b/app/game.html
@@ -11,6 +11,9 @@
 <script src="../client/bower_components/three.js//three.min.js"></script>
 <script src="js/models/RingGeometry3D.js"></script>
 <script src="js/models/RingArray.js"></script>
+<script src="js/glow/threex.dilategeometry.js"></script>
+<script src="js/glow/threex.atmospherematerial.js"></script>
+<script src="js/glow/threex.geometricglowmesh.js"></script>
 <script src="js/models/player.js"></script>
 <script src='js/game.js'></script>
 
