game.html sources our minified js files

--- a/app/game.html
+++ b/app/game.html
@@ -7,15 +7,12 @@
 </head>
 <body>
 
-<script src="../client/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../client/bower_components/three.js//three.min.js"></script>
-<script src="js/models/RingGeometry3D.js"></script>
-<script src="js/models/RingArray.js"></script>
-<script src="js/glow/threex.dilategeometry.js"></script>
-<script src="js/glow/threex.atmospherematerial.js"></script>
-<script src="js/glow/threex.geometricglowmesh.js"></script>
-<script src="js/models/player.js"></script>
-<script src='js/game.js'></script>
+<script src="js/vendor.min.js"></script>
+<script src="js/main.min.js"></script>
+<div id='info'>
+	<div id='level'>Level 0</div>
+	<div id='score'></div>
+</div>
 
 </body>
 </html>
