player has 5 lives

--- a/app/game.html
+++ b/app/game.html
@@ -10,8 +10,9 @@
 <script src="js/vendor.min.js"></script>
 <script src="js/main.min.js"></script>
 <div id='info'>
-	<div id='level'>Level 0</div>
+	<div id='level'>Level: 0</div>
 	<div id='score'></div>
+	<div id='lives'>Lives remaining: 5</div>
 </div>
 
 </body>
