Fixes effectiveRadius again

--- a/demo-scene/ringtest.html
+++ b/demo-scene/ringtest.html
@@ -14,13 +14,20 @@
 </head>
 <body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.js"></script>
+<script src="../app/js/submodules/three.js/build/three.js"></script>
 <script src='../app/js/controls/OrbitControls.js'></script>
 <script src="../app/js/models/RingGeometry3D.js"></script>
 <script src="../app/js/models/RingArray.js"></script>
 <script src="../app/js/glow/threex.dilategeometry.js"></script>
 <script src="../app/js/glow/threex.atmospherematerial.js"></script>
 <script src="../app/js/glow/threex.geometricglowmesh.js"></script>
+<script src="../app/js/submodules/three.js/examples/js/shaders/ConvolutionShader.js"></script>
+<script src="../app/js/submodules/three.js/examples/js/shaders/CopyShader.js"></script>
+<script src="../app/js/submodules/three.js/examples/js/postprocessing/MaskPass.js"></script>
+<script src="../app/js/submodules/three.js/examples/js/postprocessing/RenderPass.js"></script>
+<script src="../app/js/submodules/three.js/examples/js/postprocessing/ShaderPass.js"></script>
+<script src="../app/js/submodules/three.js/examples/js/postprocessing/EffectComposer.js"></script>
+<script src="../app/js/submodules/three.js/examples/js/postprocessing/BloomPass.js"></script>
 <script src="../app/js/models/player.js"></script>
 <script src="ringtest.js"></script>
 </body>
