game.html updated

--- a/app/game.html
+++ b/app/game.html
@@ -12,7 +12,7 @@
 <div id='info'>
 	<div id='level'>Level: 0</div>
 	<div id='score'></div>
-	<div id='lives'>Lives remaining: 5</div>
+	<div id='lives'>Lives Remaining: 5</div>
 </div>
 
 </body>
