--- a/client/game.html
+++ b/client/game.html
@@ -13,6 +13,7 @@
 <div id='info'>
 	<div id='level'>Level 0</div>
 	<div id='score'></div>
+	<div id='lives'>Lives Remaining: 5</div>
 </div>
 
 </body>
