game.js fix to allow for game over screen

--- a/client/gameover.html
+++ b/client/gameover.html
@@ -31,11 +31,12 @@
             <div class="four wide field">
             </div>
             <div class="four wide field">
-              Your Name <br><br>
-              <input type="text" placeholder="Enter Your Name">
+              Your Name <br><br><br>
+              <input id="name-score" type="text" placeholder="Enter Your Name">
+              <div id="name-final"></div>
             </div>
             <div class="four wide field">
-              YOUR SCORE <br><br>
+              YOUR SCORE <br><br><br>
               <div id="playerscore">
               
               </div>
@@ -56,6 +57,55 @@
       </div>
     </div>
   </div>
+  <div class="ui page grid">
+  <br>
+    <div class="row">
+      <div class="column">
+        <h2 class="center aligned ui header">
+          High Scores
+        </h2>
+        <br>
+        <div class="ui horizontal divider"><i class="reorder icon"></i></div>
+
+        <div>
+          <div class="commentbox">
+          <p class="firstScore"></p>
+          <p class="playerquotesource">
+            -Hideo Kojima
+          </p>
+          <br>
+          <p class="playerquote">
+            Artwork in its purest form.
+          </p>
+          <p class="playerquotesource">
+            -Jony Ive
+          </p>
+          <br>
+          <p class="playerquote">
+            Project Amber Elk is absolutely stunning.
+          </p>
+          <p class="playerquotesource">
+            -Fred
+          </p>
+          <br>
+          <p class="playerquote">
+            Transformational.
+          </p>
+          <p class="playerquotesource">
+            -Phillip
+          </p>
+          <br>
+          <p class="playerquote">
+            Sublime.
+          </p>
+          <p class="playerquotesource">
+            -Oprah
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/vendor.min.js"></script>
   <script src='js/gameover.js'></script>
 </body>
